2011-01-17  MORITA Hajime  <morrita@google.com>

        Reviewed by Dimitri Glazkov.

        ElementRareData::m_shadowRoot should not be RefPtr.
        https://bugs.webkit.org/show_bug.cgi?id=51914

        This change makes m_shadowRoot a raw pointer, as Node::m_parent is.
        This change is safe because shadow host pointer is stored as TreeShared::m_parent
        which prevents deletion unless set to null.
        
        No test, no behavioral change.

        * dom/Element.cpp:
        (WebCore::Element::shadowRoot):
        (WebCore::Element::setShadowRoot):
        (WebCore::Element::removeShadowRoot):
        * dom/ElementRareData.h:
        (WebCore::ElementRareData::ElementRareData):

2011-01-17  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Dan Bernstein.

        Some WebKit2 layout tests crash due to focus being on a frame in the page cache
        https://bugs.webkit.org/show_bug.cgi?id=52607

        No new tests. Existing tests crash in WebKit2 without this fix.
        
        I suspect there are other consequences besides the WebKit2 crash, but I
        was unable to identify any for certain.

        * history/CachedFrame.cpp:
        (WebCore::CachedFrame::CachedFrame): If a frame still has focus when its page
        goes in the page cache, reset focus to the main frame.

2011-01-17  Adam Roben  <aroben@apple.com>

        Simplify WKCACFLayerRenderer's API

        createRenderer/destroyRenderer are now hidden behind setHostWindow.
        WKCACFLayerRendererClient::animationsStarted has been removed, as it
        was never called. (The work it was supposed to do was already being
        accomplished by WKCACFLayerRenderer::render telling each layer that
        animations are starting.)

        Fixes <http://webkit.org/b/52587> WKCACFLayerRenderer is hard to use

        Reviewed by Chris Marrin.

        * platform/graphics/win/MediaPlayerPrivateFullscreenWindow.cpp: