@@ -1,3 +1,10 @@
+2011-01-17 MORITA Hajime  <morrita@google.com>
+
+        Unreviewed crash fix, which introduced at r75995
+
+        * dom/Element.cpp:
+        (WebCore::Element::removeShadowRoot):
+
 2011-01-17  MORITA Hajime  <morrita@google.com>
 
         Reviewed by Dimitri Glazkov.
